# ResearchProject

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  basic_flow_understanding.md  dashboard.html  expose.tex  progress_doc.md  project_description.txt  project_info.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
pipeline/: __init__.py  __main__.py  config.py  graph.py  llm.py  reporting.py  state.py
pipeline/analysis/: __init__.py  error_taxonomy.py  pyverilog_runner.py  verible_runner.py
pipeline/eval/: __init__.py  aggregate.py  harness.py  icarus.py  mutant_gen.py
pipeline/nodes/: __init__.py  classify.py  error_reasoner.py  evaluate.py  extract_spec.py  gen_checker.py  gen_driver.py  gen_dut.py  gen_scenarios.py  merge_generation.py  pyverilog_analysis.py  repair.py  standardise.py
pipeline/standardiser/: __init__.py  fdisplay_inserter.py
prompts/: classify_circuit.j2  error_reasoner.j2  extract_spec.j2  gen_checker.j2  gen_driver.j2  gen_dut.j2  gen_mutant.j2  gen_scenarios.j2  repair_driver.j2
scripts/: aggregate_results.py  run_eval.py  run_eval.sh  run_smoke.sh
specs/001-langgraph-pipeline/: README.md  plan.md  spec.md  tasks.md
specs/002-pyverilog-analysis/: plan.md  spec.md  tasks.md
specs/003-dut-gen-and-results/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-repair-loop/: data-model.md  (+5 more)
tests/: conftest.py
(+54 files in other folders)
