[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verilog-tb-pipeline"
version = "0.1.0"
description = "LangGraph pipeline for LLM-driven Verilog testbench generation with Pyverilog-based early error localization"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "anthropic>=0.40.0",
    "pyverilog>=1.3.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
pipeline = "pipeline.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
